fear: add mouse in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 unbind C-b
 
+set -g mouse on
 set -g prefix C-a
 bind-key C-a send-prefix
 
@@ -40,9 +41,6 @@ set-option -g renumber-windows on
 
 bind-key b break-pane -d
 bind q killp
-
-run-shell ~/clone/path/yank.tmux
-
 
 # Neon Cyberpunk theme {{{
 
