--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,8 +2,10 @@ set -g prefix C-a
 
 set -sg escape-time 0
 
+set-option -g mouse on
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+setw -g mode-keys vi
 
 bind \\ split-window -h
 bind - split-window -v
@@ -14,6 +16,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'sainnhe/tmux-fzf'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
