--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,6 +7,11 @@ set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 setw -g mode-keys vi
 
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 bind \\ split-window -h
 bind - split-window -v
 unbind '"'
