--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,10 +12,10 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-bind \\ split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
+# bind \\ split-window -h
+# bind - split-window -v
+# unbind '"'
+# unbind %
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
