--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,16 +12,26 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-# bind \\ split-window -h
-# bind - split-window -v
-# unbind '"'
-# unbind %
+bind -n C-S-Left resize-pane -L 5
+bind -n C-S-Right resize-pane -R 5
+bind -n C-S-Up resize-pane -U 5
+bind -n C-S-Down resize-pane -D 5
 
+# bind -n S-S-h 
+bind -n M-Right select-pane -R
+bind -n M-Down select-pane -D
+bind -n M-Left select-pane -L
+bind -n M-Up select-pane -U
+# bind -n C-S-h swap-pane -D
+# bind -n C-S-j swap-pane -D
+# bind -n C-S-k swap-pane -U
+# bind -n C-S-l swap-pane -U
+#
+# plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'sainnhe/tmux-fzf'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
