--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,11 +17,13 @@ bind -n C-S-Right resize-pane -R 5
 bind -n C-S-Up resize-pane -U 5
 bind -n C-S-Down resize-pane -D 5
 
-# bind -n S-S-h 
 bind -n M-Right select-pane -R
 bind -n M-Down select-pane -D
 bind -n M-Left select-pane -L
 bind -n M-Up select-pane -U
+
+bind -n M-S-Up swap-pane -D
+bind -n M-S-Down swap-pane -U
 # bind -n C-S-h swap-pane -D
 # bind -n C-S-j swap-pane -D
 # bind -n C-S-k swap-pane -U
