--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,6 +12,8 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+bind -n C-p last-window
+
 bind -n C-S-Left resize-pane -L 5
 bind -n C-S-Right resize-pane -R 5
 bind -n C-S-Up resize-pane -U 5
