--- a/i3/config
+++ b/i3/config
@@ -7,7 +7,9 @@
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
-for_window [class="^.*"] border pixel 3
+# Remove ugly titlebar
+for_window [class="^.*"] border pixel 0
+gaps inner 10
 
 set $mod Mod1
 
@@ -51,15 +53,15 @@ tiling_drag modifier titlebar
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec alacritty
-bindsym $mod+g exec firefox
+bindsym $mod+g exec qutebrowser
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+# bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+bindcode $mod+d exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -187,12 +189,15 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+# bar {
+#         status_command i3status
+# }
 
-exec_always --no-startup-id blueberry-tray
-exec --no-startup-id ~/.screenlayout/hdmi-only.sh
+#exec_always --no-startup-id blueberry-tray
+#exec --no-startup-id ~/.screenlayout/hdmi-only.sh
+exec feh --bg-scale $HOME/.dotfiles/wallpapers/mike2.jpg
+exec polybar
+exec picom --config $HOME/.config/picom/picom.sample.conf
 
-floating_minimum_size 75 x 50
-floating_maximum_size -1 x -1
+# floating_minimum_size 75 x 50
+# floating_maximum_size -1 x -1
