--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,9 +1,47 @@
+import = [
+  "/usr/lib/node_modules/alacritty-themes/themes/Gruvbox-Light.toml"
+]
+
 [shell]
 program = "/usr/bin/bash"
 
 [font]
-normal = { family = "JetBrainsMono", style = "regular" }
-size = 11.0
+size = 11
+
+  [font.normal]
+  family = "JetBrainsMono"
+  style = "regular"
 
 [env]
 term = "xterm-256color"
+
+# Colors (Gruvbox dark)
+
+# Default colors
+[colors.primary]
+# hard contrast background = = '#1d2021'
+background = '#282828'
+# soft contrast background = = '#32302f'
+foreground = '#ebdbb2'
+
+# Normal colors
+[colors.normal]
+black   = '#282828'
+red     = '#cc241d'
+green   = '#98971a'
+yellow  = '#d79921'
+blue    = '#458588'
+magenta = '#b16286'
+cyan    = '#689d6a'
+white   = '#a89984'
+
+# Bright colors
+[colors.bright]
+black   = '#928374'
+red     = '#fb4934'
+green   = '#b8bb26'
+yellow  = '#fabd2f'
+blue    = '#83a598'
+magenta = '#d3869b'
+cyan    = '#8ec07c'
+white   = '#ebdbb2'
