picom: adjust opacitty

--- a/picom/p.config
+++ b/picom/p.config
@@ -6,17 +6,19 @@ glx-copy-front = false;
 
 active-opacity = 0.95;
 inactive-opacity = 0.75;
-frame-opacity = 1;
-inactive-opacity-override = true;
+# frame-opacity = 1;
+# inactive-opacity-override = true;
 
-# opacity-rule = [
-  # "95:class_g = 'Alacritty' &&  focused",
-  # "60:class_g = 'Alacritty' && !focused"
-  # "10:class_g *= 'Firefox' && focused"
-# ]
 
-blur-background = true;
-blur-background-exclude = [ "window_type  = 'dock'" ];
+## xprop | grep WM_CLASS
+opacity-rule = [
+  "100:class_g = 'dmenu'",
+  "100:class_g = 'clipmenud'",
+  "100:class_g = 'arandr'"
+]
+
+# blur-background = true;
+# blur-background-exclude = [ "window_type  = 'dock'" ];
 
 fading = true;
 fade-delta = 3;
