i3wm and picom changes

--- a/picom/p.config
+++ b/picom/p.config
@@ -14,7 +14,9 @@ inactive-opacity = 0.75;
 opacity-rule = [
   "100:class_g = 'dmenu'",
   "100:class_g = 'clipmenud'",
-  "100:class_g = 'arandr'"
+  "100:class_g = 'arandr'",
+  "100:class_g = 'rofi'",
+  "100:class_g = 'qutebrowser' && focused"
 ]
 
 # blur-background = true;
