--- a/i3/config
+++ b/i3/config
@@ -8,14 +8,16 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 # Remove ugly titlebar
-for_window [class="^.*"] border pixel 0
-gaps inner 10
+for_window [class="^.*"] border pixel 2
+gaps inner 15
+
+client.focused          #928374 #928374 #ffffff #928374 #928374
 
 set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:JetBrainsMonoNerdFont 9
+font pango:JetBrainsMono 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -35,6 +37,12 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
+
+exec_always --no-startup-id pkill polybar && polybar
+exec_always --no-startup-id pkill greenclip && greenclip daemon &
+# exec_always --no-startup-id dmenu &
+# exec_always --no-startup-id clipmenud
+exec_always --no-startup-id picom --config ~/.dotfiles/picom/p.config
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -59,9 +67,16 @@ bindsym $mod+g exec qutebrowser
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-# bindsym $mod+d exec --no-startup-id dmenu_run
+# bindsym $mod+d exec dmenu_run -i -p 'Application: ' -fn JetBrainsMono:size=10
+bindsym $mod+d exec rofi -show drun
+
+# start clipmenud
+# clipboard history for dmenu
+#bindsym $mod+Shift+d exec clipmenu -i -p 'Clipboard History: ' -fn JetBrainsMono:size=10
+bindsym $mod+Shift+d exec rofi -modi "clipboard:greenclip print" -show clipboard -run-command '{cmd}'
+
 # A more modern dmenu replacement is rofi:
-bindcode $mod+d exec "rofi -modi drun,run -show drun"
+# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -72,23 +87,11 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# alternatively, you can use the cursor keys:
-# bindsym $mod+Left focus left
-# bindsym $mod+Down focus down
-# bindsym $mod+Up focus up
-# bindsym $mod+Right focus right
-
 # move focused window
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
-
-# alternatively, you can use the cursor keys:
-# bindsym $mod+Shift+Left move left
-# bindsym $mod+Shift+Down move down
-# bindsym $mod+Shift+Up move up
-# bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 bindsym $mod+i split h
@@ -195,9 +198,5 @@ bindsym $mod+r mode "resize"
 
 #exec_always --no-startup-id blueberry-tray
 #exec --no-startup-id ~/.screenlayout/hdmi-only.sh
-exec feh --bg-scale $HOME/.dotfiles/wallpapers/mike2.jpg
-exec polybar
-exec picom --config $HOME/.config/picom/picom.sample.conf
-
-# floating_minimum_size 75 x 50
-# floating_maximum_size -1 x -1
+exec ~/.screenlayout/vga-only.sh
+exec feh --bg-scale ~/.dotfiles/wallpapers/Voltz-2560x1748.jpg
