--- a/picom/p.config
+++ b/picom/p.config
@@ -5,10 +5,9 @@ glx-no-stencil = true;
 glx-copy-front = false;
 
 active-opacity = 0.95;
-inactive-opacity = 0.75;
+inactive-opacity = 0.9;
 # frame-opacity = 1;
 # inactive-opacity-override = true;
-
 
 ## xprop | grep WM_CLASS
 opacity-rule = [
@@ -16,7 +15,9 @@ opacity-rule = [
   "100:class_g = 'clipmenud'",
   "100:class_g = 'arandr'",
   "100:class_g = 'rofi'",
-  "100:class_g = 'qutebrowser' && focused"
+  "100:class_g = 'rider'",
+  "100:class_g = 'qutebrowser' && focused",
+  "100:class_g = 'firefox' && focused"
 ]
 
 # blur-background = true;
